# axumcli

./: Cargo.toml  DOCs.md  README.md
src/: main.rs  matches.rs
src/command/: generate.rs  main.rs  mod.rs
src/generate/: config.rs  dto.rs  entity.rs  error.rs  handler.rs  middleware.rs  mod.rs  route.rs  service.rs  state.rs
src/new/: mod.rs
src/util/: mod.rs
src/utilities/: mod.rs
